--- a/src/renderer/src/components/PageContainer/PageContainer.css
+++ b/src/renderer/src/components/PageContainer/PageContainer.css
@@ -10,13 +10,12 @@
   container-type: inline-size;
 }
 
-
 .page-content-container {
   width: 75%;
   height: 100%;
 }
 
-@container page-container (width < 600px) {
+@container page-container (width < 1000px) {
   .page-content-container {
     width: 100%;
   }
